[package]
name = "x-post"
version = "0.2.1"
authors = ["JoungDongSub <ehdtjqwjd@naver.com>"]
description = "A sort of Components"
keywords = ["koreaOf", "x", "x-post"]
edition = "2024"
license = "MIT"
include = ["src/*.rs", "Cargo.toml"]
readme = "README.md"
repository = "https://github.com/JoungDongSubInje/x-post"
documentation = "https://github.com/JoungDongSubInje/x-post/tree/main/doc"
homepage = "https://github.com/JoungDongSubInje/x-post/blob/main/README.md"

[package.metadata.docs.rs]
# Build the documentation with all features enabled
all-features = true

[dependencies]